objects/BigObjectTwoIndexes__b.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text2</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>web__c</fullName>
        <label>web</label>
        <type>Url</type>
    </fields>
    <indexes>
        <fullName>IndexCreated</fullName>
        <fields>
            <name>Name__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Text2__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>IndexCreated</label>
    </indexes>
    <label>BigObjectTwoIndexes</label>
    <pluralLabel>BigObjectTwoIndexes</pluralLabel>
</CustomObject>